/*
Copyright 2019 The Vitess Authors.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

// Protobuf service for the automation framework.

syntax = "proto3";
option go_package = "vitess.io/vitess/go/vt/proto/automationservice";

package automationservice;

import "automation.proto";

service Automation {
  // Start a cluster operation.
  rpc EnqueueClusterOperation(automation.EnqueueClusterOperationRequest) returns (automation.EnqueueClusterOperationResponse) {};

  // TODO(mberlin): Polling this is bad. Implement a subscribe mechanism to wait for changes?
  // Get all details of an active cluster operation.
  rpc GetClusterOperationDetails(automation.GetClusterOperationDetailsRequest) returns (automation.GetClusterOperationDetailsResponse) {};
}
